cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_12.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:52: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:52:9: Write of unused value
50.           }
51.           l2n(tout0, iv);
52.           l2n(tout1, iv);
              ^
53.       } else {
54.           n2l(iv, xor0);
